--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,233 @@
 ---
-
+import Layout from "../../Layout.astro"
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout>
+	<div class="forsidebillede">
+		<img src="/billeder/forsidebillede3.svg" alt="forsidebillede">
+	</div>
+
+	<div class="grid_1_1">
+		<div>
+			<img src="/billeder/piger.jpg" alt="piger">
+		</div>
+		<div>
+			<h2>Hvem er vi?</h2>
+			<p>Vi arbejder for at forebygge mistrivsel blandt piger og unge kvinder.</p>
+			<p>Alt for mange piger og unge kvinder har det dårligt mentalt. GirlTalk arbejder for at bremse den stigende mistrivsel og for at alle piger har en at tale med.</p>
+		</div>
+	</div>
+
+	<img src="/billeder/talebobel1.svg" alt="talebobel" class="talebobel1">
+	<img src="/billeder/kedpige.svg" alt="ked af det pige">
+
+	<div class="fomo_tekst">
+	<h2>FOMO - FEAR OF MISSING OUT?</h2>
+	<p>Er du også bange for at gå glip af noget? - Det er du ikke ene om. Det er blevet udbredt med ensomhed og FOMO blandt unge piger. Først og fremmest er det vigtigt at erkende, at du føler dig ensom. 
+
+		Husk, at det er helt normalt at opleve ensomhed gennem livet.
+		</p>
+	</div>
+	<div class="grid_1_1_1">
+	<img src="/billeder/fact1.svg" alt="fact 1" class="fact1">
+	<img src="/billeder/fact2.svg" alt="fact 2" class="fact2">
+	<img src="/billeder/fact3.svg" alt="fact 3">
+</div>
+
+<div class="topiger">
+	<img src="/billeder/topiger.svg" alt="">
+</div>
+
+	<img src="/billeder/talebobel2.svg" alt="talebobel2" class="talebobel2">
+	<img src="/billeder/talebobel3.svg" alt="talebobel3" class="talebobel3">
+
+	<div class="alene_tekst">
+		<h2>Føler du dig alene eller udenfor?</h2>
+		<p>Ensomhed kan opstå pludseligt, især når vi ser andre deltage i sociale aktiviteter eller glædesfyldte sammenkomster, mens vi selv føler os udenfor. Dette forstærkes ofte af sociale medieindlæg, der giver indtryk af, at alle andre har det sjovt, mens vi er alene.</p>
+		<p>Det er vigtigt at forstå, at ensomhed ikke kun handler om fysisk isolation, men også om følelsesmæssig forbindelse. Man kan føle sig ensom selv med mange venner, hvis man ikke føler sig forstået eller forbundet med dem, og omvendt kan man være alene uden at føle sig ensom, hvis man har stærke forbindelser til andre eller føler sig tilfreds med sig selv.</p>
+	</div>
+
+	<img src="/billeder/alenepige.svg" alt="alene pige">
+
+	<h2 class="tips_tekst">7 tips til at slippe af med FOMO</h2>
+
+	<div class="grid_1_4">
+<div>
+	<h2>1.</h2>
+</div>
+<div>
+	<p>Køb en dagbog</p>
+	<p>Træn dig i daglig taknemmelighed. Skriv tre ting ned hver dag, som du er taknemmelig for, for at undgå sammenligning med andre og fokusere på dit eget livs positiver frem for selvkritik.</p>
+</div>
+	</div>
+
+	<div class="grid_1_4">
+			<div>
+				<h2>2.</h2>
+			</div>
+			
+			<div>
+				<p>Reflekter over, hvad du vil i dit liv</p>
+				<p>Fokusér på dine egne ønsker og mål, ikke andres. Reflekter over, hvad der bringer dig glæde og brug det som guide i livet, i stedet for at lade dig distrahere af andres handlinger.</p>
+			</div>
+		</div>
+
+		<div class="grid_1_4">
+			<div>
+				<h2>3.</h2>
+			</div>
+			<div>
+				<p>Lav SOME regler for dig selv</p>
+				<p>Indfør regler for brug af sociale medier. Tillad dig selv at tjekke Instagram/TikTok to gange dagligt i stedet for konstant.</p>
+			</div>
+		</div>
+
+		<div class="grid_1_4">
+			<div>
+				<h2>4.</h2>
+			</div>
+			<div>
+				<p>Hold devicefri dage</p>
+				<p>Studier viser, at unge oplever angst ved at undvære deres telefoner. Tanja Staal Wegner anbefaler, at man holder dage, hvor telefonen er slukket, for at undgå at føle sig konstant tilgængelig. Dette giver mulighed for at finde indre ro og øger selvværdet.</p>
+			</div>
+		</div>
+
+		<div class="grid_1_4">
+			<div>
+				<h2>5.</h2>
+			</div>
+			<div>
+				<p>Træn dig selv i at være til stede i nuet</p>
+				<p>Vær nærværende i øjeblikket for at undgå at lade dig distrahere af andre. Øv dig i at fokusere på det, du laver, og undlad at blive fristet til at dele på sociale medier.</p>
+			</div>
+		</div>
+
+		<div class="grid_1_4">
+			<div>
+				<h2>6.</h2>
+			</div>
+			<div>
+				<p>Se mennesker ansigt til ansigt</p>
+				<p>Vi kender alle typen, der altid er fordybet i deres telefon, når de er sammen med andre. Stop det. Læg telefonen væk og kig folk i øjnene. Når vi er sammen med mennesker i stedet for at følge dem på sociale medier, opdager vi ofte, at de ikke er så perfekte, som vi tror. </p>
+			</div>
+		</div>
+
+		<div class="grid_1_4">
+			<div>
+				<h2>7.</h2>
+			</div>
+			<div>
+				<p>Træk vejret</p>
+				<p>At trække vejret kan virke simpelt, men det er utroligt effektivt. I en travl hverdag kan det være udfordrende at være til stede i øjeblikket, men vejrtrækning giver øjeblikkelig ro og kontrol. Prøv det flere gange dagligt for at fokusere din opmærksomhed væk fra det hektiske og ind i nuet. Det kræver ingen præstation, blot at trække vejret. </p>
+			</div>
+		</div>
+
+		<div class="girlpower">
+		<img  src="/billeder/girlpwr.svg" alt="girlpower" >
+	</div>
+	
+		
+</Layout>
+
+
+<style>
+	p{
+		font-family: "Archivo", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+	color: #273AAA;
+}
+
+h1, h2{
+	font-family: "obviously", sans-serif;
+font-weight: 700;
+font-style: normal;
+color: #273AAA;
+}
+
+p{
+	font-size: 35px;
+}
+
+h2{
+	font-size: 60px;
+}
+	
+	.forsidebillede img{
+		width: 100%;
+	}
+
+	body{
+		background-color: #f7c7d9;
+	}
+
+	.grid_1_1{
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		padding: 90px;
+		padding-top: 160px;
+		gap: 40px;
+	}
+
+	.fomo_tekst h2, .fomo_tekst p{
+		color: #FC4D5C;
+	}
+
+	.talebobel1{
+		padding-left: 130px;
+	}
+
+	.talebobel2, .talebobel3{
+		padding: 70px;
+	}
+
+	.grid_1_1_1{
+		display: grid;
+		grid-template-rows: 1fr 1fr 1fr;
+		padding-top: 200px;
+		padding-bottom: 200px;
+}
+
+.fact2 {
+	padding-left: 750px;
+}
+
+.topiger{
+padding-bottom: 100px;
+}
+
+.alene_tekst h2{
+	color: #FC4D5C;
+}
+
+.alene_tekst{
+	padding: 80px;
+}
+
+.grid_1_4 {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+	padding-left: 90px;
+	padding-right: 90px;
+	gap: 50px;
+}
+
+.grid_1_4 h2{
+	font-size: 180px;
+}
+
+.tips_tekst{
+	text-align: center;
+}
+
+.girlpower img{
+
+}
+
+
+</style>
