rettet i mobile og desktop

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,24 @@
 ---
 import Layout from "../../Layout.astro"
+import Footer from "../components/Footer.astro"
 ---
 
 <Layout>
+	<div class="forside">
 	<div class="forsidebillede">
 		<img src="/billeder/forsidebillede3.svg" alt="forsidebillede">
+	</div>
+
+	<div class="text">
+		<img src="/billeder/text.svg" alt="girl talk tekst">
+	</div>
 	</div>
 
 	<div class="grid_1_1">
 		<div>
 			<h2>Hvem er vi?</h2>
 			<p>Vi arbejder for at forebygge mistrivsel blandt piger og unge kvinder.</p>
+			<br>
 			<p>Alt for mange piger og unge kvinder har det dårligt mentalt. GirlTalk arbejder for at bremse den stigende mistrivsel og for at alle piger har en at tale med.</p>
 		</div>
 		<div>
@@ -19,7 +27,10 @@ import Layout from "../../Layout.astro"
 	</div>
 
 	<img src="/billeder/talebobel1.svg" alt="talebobel" class="talebobel1">
+
+	<div class="kedpige">
 	<img src="/billeder/kedpige.svg" alt="ked af det pige" class="kedpige">
+</div>
 
 	<div class="fomo_tekst">
 	<h2>FOMO - FEAR OF MISSING OUT?</h2>
@@ -28,6 +39,7 @@ import Layout from "../../Layout.astro"
 		Husk, at det er helt normalt at opleve ensomhed gennem livet.
 		</p>
 	</div>
+
 	<div class="grid_1_1_1">
 	<img src="/billeder/fact1.svg" alt="fact 1" class="fact1">
 	<img src="/billeder/fact2.svg" alt="fact 2" class="fact2">
@@ -35,7 +47,7 @@ import Layout from "../../Layout.astro"
 </div>
 
 <div class="topiger">
-	<img src="/billeder/topiger.svg" alt="">
+	<img src="/billeder/topiger.svg" alt="to piger">
 </div>
 
 	<img src="/billeder/talebobel2.svg" alt="talebobel2" class="talebobel2">
@@ -44,10 +56,14 @@ import Layout from "../../Layout.astro"
 	<div class="alene_tekst">
 		<h2>Føler du dig alene eller udenfor?</h2>
 		<p>Ensomhed kan opstå pludseligt, især når vi ser andre deltage i sociale aktiviteter eller glædesfyldte sammenkomster, mens vi selv føler os udenfor. Dette forstærkes ofte af sociale medieindlæg, der giver indtryk af, at alle andre har det sjovt, mens vi er alene.</p>
+		<br>
+		<br>
 		<p>Det er vigtigt at forstå, at ensomhed ikke kun handler om fysisk isolation, men også om følelsesmæssig forbindelse. Man kan føle sig ensom selv med mange venner, hvis man ikke føler sig forstået eller forbundet med dem, og omvendt kan man være alene uden at føle sig ensom, hvis man har stærke forbindelser til andre eller føler sig tilfreds med sig selv.</p>
 	</div>
 
+	<div class="alene_pige">
 	<img src="/billeder/alenepige.svg" alt="alene pige" class="alene_pige">
+	</div>
 
 	<h2 class="tips_tekst">7 tips til at slippe af med FOMO</h2>
 
@@ -128,49 +144,101 @@ import Layout from "../../Layout.astro"
 		<div class="girlpower">
 		<img  src="/billeder/girlpwr.svg" alt="girlpower" >
 	</div>
-	
+
+	<div class="grid_1_1_1_1">
+		<div class="indhold">
+			<h3>Chat med os</h3>
+			<p>GirlTalks chatrådgivning er for dig mellem 12 og 24 år. Du kan chatte med vores ungerådgivere hver aften eller sende en sms til os hele døgnet. Du er altid anonym og kan trygt dele dine tanker med os. Vi glæder os til at skrive med dig<3 </p>
+				<div class="knap">
+					<h4> CHAT NU</h4>
+				</div>
+		</div>
 		
+		<div class="indhold chat_billede">
+			<img src="/billeder/chat.svg" alt="billede af chatmuligheder">
+		</div>
+
+		<div class="indhold">
+			<div>
+			<h3>Chattens åbningstider</h3>
+			<p>Man - Tors 18:30 - 24:00</p>
+			<p>Fre - Lør 19:00 - 23:00</p>
+			<p>Søn 18:30 24:00</p>
+			</div>
+		</div>
+
+		<div class="indhold">
+			<h3>Sms - 49 49 18 18</h3>
+			<p>Du kan skrive til os døgnet rundt. 
+				Vi besvarer din sms i åbningstiden.</p>
+			<p>SMS til 49 49 18 18 </p>
+		</div>
+	</div>
+	
+		<Footer />
 </Layout>
 
 
 <style>
 	 * {
-                        margin: 0;
-                        box-sizing: border-box;
+        margin: 0;
+        box-sizing: border-box;
+      }
 
-                }
+	  :root {
+		--baggrund: #f7c7d9;
+		--farve1: #273AAA;
+		--farve2: #FC4D5C;
+		--farve3: #FFF5EB; 
+	  }
 	p{
 		font-family: "Archivo", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 600;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-	color: #273AAA;
-}
+		font-optical-sizing: auto;
+		font-weight: 600;
+		font-style: normal;
+		font-variation-settings:
+		"wdth" 100;
+		color: var(--farve1);
+	}
 
-h1, h2{
-	font-family: "obviously", sans-serif;
-font-weight: 700;
-font-style: normal;
-color: #273AAA;
-}
 
-p{
-	font-size: 20px;
-	line-height: 30px;
-}
+	h1, h2, h3, h4{
+		font-family: "obviously", sans-serif;
+		font-weight: 700;
+		font-style: normal;
+		color: var(--farve1);
+	}
 
-h2{
-	font-size: 38px;
-}
+	p{
+		font-size: 20px;
+		line-height: 30px;
+	}
+
+	h2{
+		font-size: 38px;
+	}
 	
 	.forsidebillede img{
 		width: 100%;
 	}
 
+	.text img {
+		width: 60%;
+	}
+
+	.forside{
+		position: relative;
+	}
+
+	.text {
+    	position: absolute; /* Gør billedet med teksten absolut positioneret */
+    	top: 40%; /* Placer billedet øverst */
+    	left: 30%; /* Placer billedet helt til venstre */
+    	z-index: 1; /* Sørg for at teksten er over forsidenbilledet */
+	}
+
 	body{
-		background-color: #f7c7d9;
+		background-color: var(--baggrund);
 	}
 
 	.grid_1_1{
@@ -194,9 +262,13 @@ h2{
 	img.talebobel3{
 		padding-bottom: 100px;
 	}
+
+	.fomo_tekst {
+		padding-left: 15px;
+	}
 	
 	.fomo_tekst h2, .fomo_tekst p{
-		color: #FC4D5C;
+		color: var(--farve2);
 	}
 
 	.fomo_tekst h2 {
@@ -236,8 +308,9 @@ h2{
 		padding: 20px;
 	}
 	.alene_tekst h2{
-	color: #FC4D5C;
-	padding-bottom: 20px;
+		color: var(--farve2);
+		padding-bottom: 20px;
+		font-size: 30px;
 }
 
 	img.alene_pige{
@@ -249,11 +322,13 @@ h2{
 
 	h2.tips_tekst{
 		font-size: 30px;
+		padding-left: 15px;
 	}
 
 	.grid_1_4{
 		padding-top: 20px;
 		padding-bottom: 50px;
+		padding-left: 15px;
 	}
 
 	.girlpower img{
@@ -262,14 +337,92 @@ h2{
 		padding-bottom: 50px;
 	}
 
+	.girlpower {
+ 		display: flex;
+    	justify-content: center;
+    	align-items: center;
+}
+	.alene_pige {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.topiger{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.grid_1_1_1 {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+	}
+
+	.grid_1_1_1{
+		display: grid;
+		grid-template-rows: 1fr 1fr 1fr;
+		padding-top: 150px;
+		padding-bottom: 200px;
+	}
+
+
+	.chat_billede img{
+		width: 300px;
+	}
+
+	.chatsms img {
+		width: 200px;
+	}
+
+	.grid_1_1_1_1 {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: auto auto;
+		gap: 24px; 
+		padding-bottom: 100px;
+		align-items: center;
+		padding-left: 40px;
+	}
+
+	.knap{
+		background-color: var(--farve3);
+		width: 125px;
+		height: 35px;
+		text-align: center;
+		border-radius: 10px;
+		margin-top: 20px;
+		justify-content: center;
+		margin-left: 15%;
+	}
+
+	.grid_1_1_1_1 h2{
+		font-size: 30px;
+	}
+
+	.grid_1_1_1_1 p{
+		font-size: 15px;
+	}
+
 	
-	@media (min-width: 800px){
-		p{
-	font-size: 35px;
-}
-h2{
+@media (min-width: 800px){
+	p{
+	font-size: 30px;
+	line-height: 40px;
+	}
+	h2{
 	font-size: 60px;
-}
+	}
+
+	h3{
+		font-size: 38px;
+	}
+
+	h4{
+		font-size: 20px;
+	}
 	.grid_1_1{
 		display: grid;
 		grid-template-columns: 1fr 1fr;
@@ -278,43 +431,97 @@ h2{
 		gap: 40px;
 	}
 
-	
+	.grid_1_1 img{
+		padding-top: 10px;
+		padding-bottom: 60px;
+		width: 500px;
+	}
 
 	.talebobel1{
 		padding-left: 130px;
 		
 	}
 
-	img.talebobel1,  img.talebobel2, img.talebobel3 {
-		width: 100%;
+	img.talebobel1{
+		width: 90%;
+	}
+
+	img.kedpige{
+		width: 20%;
+	}
+
+	.fomo_tekst h2 {
+		padding-top: 0px;
+		padding-bottom: 20px;
+		font-size: 60px;
+		text-align: center;
+	}
+
+	.fomo_tekst p{
+		padding-bottom: 20px;
+		padding-left: 35px;
+		padding-right: 35px;
+	}
+
+
+	img.fact1, img.fact2, img.fact3 {
+		width: 50%;
+	}
+
+	img.fact2{
+		margin-left: 50%;
+	}
+
+
+	.topiger img{
+		width: 50%;
+		padding-bottom: 100px;
 	}
 
 	.talebobel2, .talebobel3{
 		padding: 70px;
 	}
 
-	.grid_1_1_1{
-		display: grid;
-		grid-template-rows: 1fr 1fr 1fr;
-		padding-top: 200px;
-		padding-bottom: 200px;
-}
+	img.talebobel2 {
+		width: 90%;
+	}
 
-.fact2 {
-	padding-left: 750px;
-}
+	img.talebobel3 {
+		width: 70%;
+	}
 
-.topiger{
-padding-bottom: 100px;
-}
+	img.alene_pige{
+		width: 600px;
+		height: 500px;
+	}
 
-
-
-.alene_tekst{
+	.alene_tekst{
 	padding: 80px;
-}
+	}
 
-.grid_1_4 {
+	.alene_tekst h2{
+		text-align: center;
+	}
+
+	.tips_tekst{
+	text-align: center;
+	}
+
+	h2.tips_tekst{
+		font-size: 55px;
+		padding-left: 15px;
+		padding-top: 100px;
+	}
+
+	.girlpower img{
+		width: 350px;
+	}
+
+	.grid_1_1_1{
+		display: block;
+	}
+
+	.grid_1_4 {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
@@ -322,17 +529,23 @@ padding-bottom: 100px;
 	padding-left: 90px;
 	padding-right: 90px;
 	gap: 50px;
-}
-
-.grid_1_4 h2{
-	font-size: 180px;
-}
-
-.tips_tekst{
-	text-align: center;
-}
 	}
 
+	.grid_1_4 h2{
+	font-size: 180px;
+	}
 
+	.grid_1_1_1_1 p{
+		font-size: 30px;
+	}
+
+	.chat_billede img {
+		margin-left: 30%;
+	}
+
+	.knap{
+		margin-left: 30%;
+	}
+}
 
 </style>
