--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ import Footer from "../components/Footer.astro"
 	<img src="/billeder/fact1.svg" alt="fact 1" class="fact1">
 	<img src="/billeder/fact2.svg" alt="fact 2" class="fact2">
 	<img src="/billeder/fact3.svg" alt="fact 3" class="fact3">
-</div>
+	</div>
 
 <div class="topiger">
 	<img src="/billeder/topiger.svg" alt="to piger">
@@ -361,14 +361,6 @@ import Footer from "../components/Footer.astro"
 		flex-direction: column;
 	}
 
-	.grid_1_1_1{
-		display: grid;
-		grid-template-rows: 1fr 1fr 1fr;
-		padding-top: 150px;
-		padding-bottom: 200px;
-	}
-
-
 	.chat_billede img{
 		width: 300px;
 	}
@@ -501,6 +493,7 @@ import Footer from "../components/Footer.astro"
 
 	.alene_tekst h2{
 		text-align: center;
+		font-size: 60px;
 	}
 
 	.tips_tekst{
