--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import Footer from "../components/Footer.astro"
 			<p>Alt for mange piger og unge kvinder har det dårligt mentalt. GirlTalk arbejder for at bremse den stigende mistrivsel og for at alle piger har en at tale med.</p>
 		</div>
 		<div>
-			<img src="/billeder/piger.jpg" alt="piger">
+			<img src="/billeder/piger.webp" alt="piger">
 		</div>
 	</div>
 
@@ -41,13 +41,13 @@ import Footer from "../components/Footer.astro"
 	</div>
 
 	<div class="grid_1_1_1">
-	<img src="/billeder/fact1.svg" alt="fact 1" class="fact1">
-	<img src="/billeder/fact2.svg" alt="fact 2" class="fact2">
-	<img src="/billeder/fact3.svg" alt="fact 3" class="fact3">
+	<img src="/billeder/fact1.svg" alt="fact 1" class="fade-up fact1">
+	<img src="/billeder/fact2.svg" alt="fact 2" class="fade-up fact2">
+	<img src="/billeder/fact3.svg" alt="fact 3" class="fade-up fact3">
 	</div>
 
 <div class="topiger">
-	<img src="/billeder/topiger.svg" alt="to piger">
+	<img src="/billeder/topiger.webp" alt="to piger">
 </div>
 
 	<img src="/billeder/talebobel2.svg" alt="talebobel2" class="talebobel2">
@@ -396,6 +396,19 @@ import Footer from "../components/Footer.astro"
 
 	.grid_1_1_1_1 p{
 		font-size: 15px;
+	}
+
+	.fade-up {
+		opacity: 0;
+		visibility: hidden;
+		transform: translateY(50px); 
+		transition: opacity 0.5s ease, transform 0.5s ease, visibility 0s 0.5s;
+	}
+
+	.fade-up.visible {
+		opacity: 1;
+		visibility: visible;
+		transform: translateY(0);
 	}
 
 	
