--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -284,6 +284,7 @@ import Footer from "../components/Footer.astro"
 
 	img.kedpige{
 		width: 200px;
+		margin-left: 10px;
 	}
 
 	img.fact1, img.fact2, img.fact3 {
