ændret på billeder

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,11 @@ import Footer from "../components/Footer.astro"
 <Layout>
 	<div class="forside">
 	<div class="forsidebillede">
-		<img src="/billeder/forsidebillede3.svg" alt="forsidebillede">
+		<img src="billeder/forsidebillede3.svg" alt="forsidebillede">
 	</div>
 
 	<div class="text">
-		<img src="/billeder/text.svg" alt="girl talk tekst">
+		<img src="billeder/text.svg" alt="girl talk tekst">
 	</div>
 	</div>
 
@@ -22,14 +22,14 @@ import Footer from "../components/Footer.astro"
 			<p>Alt for mange piger og unge kvinder har det dårligt mentalt. GirlTalk arbejder for at bremse den stigende mistrivsel og for at alle piger har en at tale med.</p>
 		</div>
 		<div>
-			<img src="/billeder/piger.webp" alt="piger">
+			<img src="billeder/piger.webp" alt="piger">
 		</div>
 	</div>
 
-	<img src="/billeder/talebobel1.svg" alt="talebobel" class="talebobel1">
+	<img src="billeder/talebobel1.svg" alt="talebobel" class="talebobel1">
 
 	<div class="kedpige">
-	<img src="/billeder/kedpige.svg" alt="ked af det pige" class="kedpige">
+	<img src="billeder/kedpige.svg" alt="ked af det pige" class="kedpige">
 </div>
 
 	<div class="fomo_tekst">
@@ -41,17 +41,17 @@ import Footer from "../components/Footer.astro"
 	</div>
 
 	<div class="grid_1_1_1">
-	<img src="/billeder/fact1.svg" alt="fact 1" class="fade-up fact1">
-	<img src="/billeder/fact2.svg" alt="fact 2" class="fade-up fact2">
-	<img src="/billeder/fact3.svg" alt="fact 3" class="fade-up fact3">
+	<img src="billeder/fact1.svg" alt="fact 1" class="fade-up fact1">
+	<img src="billeder/fact2.svg" alt="fact 2" class="fade-up fact2">
+	<img src="billeder/fact3.svg" alt="fact 3" class="fade-up fact3">
 	</div>
 
 <div class="topiger">
-	<img src="/billeder/topiger.webp" alt="to piger">
+	<img src="billeder/topiger.webp" alt="to piger">
 </div>
 
-	<img src="/billeder/talebobel2.svg" alt="talebobel2" class="talebobel2">
-	<img src="/billeder/talebobel3.svg" alt="talebobel3" class="talebobel3">
+	<img src="billeder/talebobel2.svg" alt="talebobel2" class="talebobel2">
+	<img src="billeder/talebobel3.svg" alt="talebobel3" class="talebobel3">
 
 	<div class="alene_tekst">
 		<h2>Føler du dig alene eller udenfor?</h2>
@@ -62,7 +62,7 @@ import Footer from "../components/Footer.astro"
 	</div>
 
 	<div class="alene_pige">
-	<img src="/billeder/alenepige.svg" alt="alene pige" class="alene_pige">
+	<img src="billeder/alenepige.svg" alt="alene pige" class="alene_pige">
 	</div>
 
 	<h2 class="tips_tekst">7 tips til at slippe af med FOMO</h2>
@@ -142,7 +142,7 @@ import Footer from "../components/Footer.astro"
 		</div>
 
 		<div class="girlpower">
-		<img  src="/billeder/girlpwr.svg" alt="girlpower" >
+		<img  src="billeder/girlpwr.svg" alt="girlpower" >
 	</div>
 
 	<div class="grid_1_1_1_1">
@@ -155,7 +155,7 @@ import Footer from "../components/Footer.astro"
 		</div>
 		
 		<div class="indhold chat_billede">
-			<img src="/billeder/chat.svg" alt="billede af chatmuligheder">
+			<img src="billeder/chat.svg" alt="billede af chatmuligheder">
 		</div>
 
 		<div class="indhold">
